# libregpt

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  index.html  tailwind.config.js
public/: tailwind.css
src/: lib.rs  main.rs  routes.rs  util.rs
src/provider/: ava.rs  bai.rs  deepai.rs  mod.rs  you.rs
src/ui/: mod.rs  utils.rs
src/ui/components/: message.rs  mod.rs  theme_switcher.rs
src/ui/reducers/: conversations.rs
static/: index.css  index.html  index.js  main.css
