[package]
name = "libregpt"
description = "A GPT front-end built for privacy."
version = "0.1.0"
repository = "https://github.com/libregpt/libregpt"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3", default-features = false }
gloo-net = { version = "0.4", default-features = false, features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
pulldown-cmark = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
uuid = { version = "1", features = ["fast-rng", "v4"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.3"
web-sys = { version = "0.3", features = ["CssStyleDeclaration", "DomStringMap", "DomTokenList", "HtmlElement", "HtmlOptionElement", "HtmlSelectElement", "MediaQueryList", "TextDecoder", "TextDecodeOptions"] }
yew = "0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-logger = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.6"
axum-server = { version = "0.5", features = ["tls-rustls"] }
boring = "3"
futures = "0.3"
hex = "0.4"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-boring = "3"
hyper-rustls = { version = "0.24", features = ["http2"] }
itoa = "1"
md5 = "0.7"
pin-project = "1"
rand = "0.8"
rand_user_agent = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["compression-full", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"

[features]
ssr = ["yew/ssr"]
hydration = ["time/wasm-bindgen", "uuid/js", "yew/hydration"]
